...
        let item = UIBarButtonItem(
            image: UIImage(systemName: "list.number"),
            style: .done,
            target: self,
            action: nil
        )
        item.accessibilityIdentifier = "HistoryButton"
        item.menu = createContextMenu()
        return item
    }()

    // MARK: - Private Properties

...
    private func showAlert(message: String) {
        let alertController = UIAlertController(
            title: AppMessages.appTitle,
            message: message,
            preferredStyle: .alert
        )
        let action = UIAlertAction(title: "Okay", style: .default)
        alertController.addAction(action)
        DispatchQueue.main.async {
            self.present(alertController, animated: true)
        }
    }

...
